Feed improvements, coins menu on smaller devices, shadowbox when loading, fixed the search bug & fixed the design on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
 a {
   color: inherit;
 }
+
+h1 {
+  font-family: "Inter", sans-serif;
+  font-size: 56px;
+
+  font-weight: 700;
+}
+
+h2 {
+  font-family: "Inter", sans-serif;
+  font-size: 40px;
+
+  font-weight: 700;
+}
+
+h3 {
+  font-family: "Inter", sans-serif;
+  font-size: 28px;
+
+  font-weight: 700;
+}
+
+h4 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+
+  font-weight: 700;
+}
+
+p {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+
+  font-weight: 500;
+}
